--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "telegram-mini-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Dazai13.github.io/telegram-mini-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
