--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "telegram-mini-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Dazai13.github.io/telegram-mini-app",
+  "homepage": "https://dazai13.github.io/telegram-mini-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
